# spectral3d

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: features.rs  lib.rs  mesh.rs  quant.rs  sample.rs  testutil.rs
