[package]
name = "spectral3d"
version = "1.1.0"
edition = "2024"
description = "A spectral hashing method for 3D objects that generates stable shape fingerprints, allowing offline verification without needing to check against a central database."
license = "MIT"
homepage = "https://github.com/motoZ-crypto/spectral3d"
repository = "https://github.com/motoZ-crypto/spectral3d.git"

[dependencies]
libm = "0.2.16"
sha2 = { version = "0.11.0", default-features = false }
